--- a/LogAppG3/src/app/auth/components/main/main.component.html
+++ b/LogAppG3/src/app/auth/components/main/main.component.html
@@ -15,8 +15,8 @@
     <div class="login">
       <form>
         <label for="chk" aria-hidden="true">Login</label>
-        <input type="email" name="email" placeholder="Email" required="">
-        <input type="password" name="pswd" placeholder="Password" required="">
+        <input type="text" name="id" placeholder="id" required="">
+        <input type="password" name="pass" placeholder="Contras;a" required="">
         <button>Login</button>
       </form>
     </div>
