--- a/LogAppG3/src/app/auth/components/main/main.component.html
+++ b/LogAppG3/src/app/auth/components/main/main.component.html
@@ -1,23 +1,1 @@
-<div class="main">
-  <input type="checkbox" id="chk" aria-hidden="true">
-
-    <div class="signup">
-      <form>
-        <label for="chk" aria-hidden="true">Sign up</label>
-        <input type="text" name="txt" placeholder="User name" required="">
-        <input type="email" name="email" placeholder="Email" required="">
-        <input type="number" name="broj" placeholder="BrojTelefona" required="">
-        <input type="password" name="pswd" placeholder="Password" required="">
-        <button>Sign up</button>
-      </form>
-    </div>
-
-    <div class="login">
-      <form>
-        <label for="chk" aria-hidden="true">Login</label>
-        <input type="text" name="id" placeholder="id" required="">
-        <input type="password" name="pass" placeholder="Contras;a" required="">
-        <button>Login</button>
-      </form>
-    </div>
-</div>
+<router-outlet></router-outlet>
